fix broken layout after reload

--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@
   font-weight: 800;
 }
 
+html {
+  height: 100vh;
+}
+
 body {
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
